package agentgateway

import (
	"context"
	"fmt"
	"sync"
	"sync/atomic"
	"time"
)

// ============================================================================
// Agent 池
// ============================================================================

// AgentTask Agent 任务
type AgentTask struct {
	Task    string
	Pattern string
	Tools   []MCPTool
	Config  map[string]string
}

// AgentStep Agent 步骤
type AgentStep struct {
	Type      string // thought, action, observation, answer, error
	Content   string
	Timestamp time.Time
}

// AgentResult Agent 结果
type AgentResult struct {
	Output  string
	Success bool
	Steps   []AgentStep
}

// Agent Agent 实例接口
type Agent interface {
	ID() string
	Chat(ctx context.Context, messages []Message) (string, error)
	ChatStream(ctx context.Context, messages []Message, callback func(string, bool) error) error
	Run(ctx context.Context, task AgentTask) (*AgentResult, error)
	RunStream(ctx context.Context, task AgentTask, callback func(AgentStep) error) error
	Reset() error
}

// AgentPool Agent 池
type AgentPool struct {
	cfg     PoolConfig
	agents  chan Agent
	factory AgentFactory
	size    int32
	mu      sync.RWMutex
}

// PoolConfig 池配置
type PoolConfig struct {
	MinSize    int           `yaml:"min_size"`
	MaxSize    int           `yaml:"max_size"`
	IdleTime   time.Duration `yaml:"idle_time"`
	WaitTime   time.Duration `yaml:"wait_time"`
	HealthTime time.Duration `yaml:"health_time"`
}

// AgentFactory Agent 工厂
type AgentFactory interface {
	Create() (Agent, error)
	Destroy(Agent) error
}

// NewAgentPool 创建 Agent 池
func NewAgentPool(cfg PoolConfig) *AgentPool {
	return &AgentPool{
		cfg:    cfg,
		agents: make(chan Agent, cfg.MaxSize),
	}
}

// SetFactory 设置 Agent 工厂
func (p *AgentPool) SetFactory(factory AgentFactory) {
	p.factory = factory
}

// Start 启动池
func (p *AgentPool) Start(ctx context.Context) error {
	if p.factory == nil {
		p.factory = &DefaultAgentFactory{}
	}

	// 预创建最小数量的 Agent
	for i := 0; i < p.cfg.MinSize; i++ {
		agent, err := p.factory.Create()
		if err != nil {
			return fmt.Errorf("创建 Agent 失败: %w", err)
		}
		p.agents <- agent
		atomic.AddInt32(&p.size, 1)
	}

	// 启动健康检查
	go p.healthCheck(ctx)

	return nil
}

// Acquire 获取 Agent
func (p *AgentPool) Acquire(ctx context.Context) (Agent, error) {
	select {
	case agent := <-p.agents:
		return agent, nil
	default:
	}

	// 尝试创建新的
	if int(atomic.LoadInt32(&p.size)) < p.cfg.MaxSize {
		agent, err := p.factory.Create()
		if err == nil {
			atomic.AddInt32(&p.size, 1)
			return agent, nil
		}
	}

	// 等待可用的 Agent
	timeout := p.cfg.WaitTime
	if timeout == 0 {
		timeout = 30 * time.Second
	}

	select {
	case agent := <-p.agents:
		return agent, nil
	case <-time.After(timeout):
		return nil, fmt.Errorf("获取 Agent 超时")
	case <-ctx.Done():
		return nil, ctx.Err()
	}
}

// Release 释放 Agent
func (p *AgentPool) Release(agent Agent) {
	if agent == nil {
		return
	}

	// 重置 Agent 状态
	agent.Reset()

	select {
	case p.agents <- agent:
	default:
		// 池满，销毁
		p.factory.Destroy(agent)
		atomic.AddInt32(&p.size, -1)
	}
}

// healthCheck 健康检查
func (p *AgentPool) healthCheck(ctx context.Context) {
	interval := p.cfg.HealthTime
	if interval == 0 {
		interval = 30 * time.Second
	}

	ticker := time.NewTicker(interval)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-ticker.C:
			// 检查池中的 Agent
			count := len(p.agents)
			for i := 0; i < count; i++ {
				select {
				case agent := <-p.agents:
					// TODO: 健康检查逻辑
					p.agents <- agent
				default:
					break
				}
			}
		}
	}
}

// GetStatus 获取 Agent 状态
func (p *AgentPool) GetStatus(agentID string) AgentStatus {
	return AgentStatus{
		ID:             agentID,
		Status:         "idle",
		ActiveSessions: 0,
		MemoryUsage:    0,
		Uptime:         0,
	}
}

// AgentStatus Agent 状态
type AgentStatus struct {
	ID             string
	Status         string
	ActiveSessions int64
	MemoryUsage    float64
	Uptime         int64
}

// ============================================================================
// 默认 Agent 工厂 (连接到 Python Agent 服务)
// ============================================================================

// DefaultAgentFactory 默认 Agent 工厂
type DefaultAgentFactory struct {
	PythonEndpoint string
}

func (f *DefaultAgentFactory) Create() (Agent, error) {
	return &PythonAgent{
		id:       fmt.Sprintf("agent-%d", time.Now().UnixNano()),
		endpoint: f.PythonEndpoint,
	}, nil
}

func (f *DefaultAgentFactory) Destroy(agent Agent) error {
	return nil
}

// PythonAgent 连接 Python Agent 的代理
type PythonAgent struct {
	id       string
	endpoint string
}

func (a *PythonAgent) ID() string {
	return a.id
}

func (a *PythonAgent) Chat(ctx context.Context, messages []Message) (string, error) {
	// TODO: 通过 HTTP/gRPC 调用 Python Agent
	return "响应消息", nil
}

func (a *PythonAgent) ChatStream(ctx context.Context, messages []Message, callback func(string, bool) error) error {
	// TODO: 通过 SSE/WebSocket 流式调用
	return callback("流式响应", true)
}

func (a *PythonAgent) Run(ctx context.Context, task AgentTask) (*AgentResult, error) {
	// TODO: 调用 Python Agent 执行任务
	return &AgentResult{
		Output:  "任务完成",
		Success: true,
		Steps: []AgentStep{
			{Type: "thought", Content: "分析任务", Timestamp: time.Now()},
			{Type: "answer", Content: "任务完成", Timestamp: time.Now()},
		},
	}, nil
}

func (a *PythonAgent) RunStream(ctx context.Context, task AgentTask, callback func(AgentStep) error) error {
	steps := []AgentStep{
		{Type: "thought", Content: "分析任务", Timestamp: time.Now()},
		{Type: "action", Content: "执行操作", Timestamp: time.Now()},
		{Type: "answer", Content: "完成", Timestamp: time.Now()},
	}

	for _, step := range steps {
		if err := callback(step); err != nil {
			return err
		}
	}

	return nil
}

func (a *PythonAgent) Reset() error {
	return nil
}
